2016-09-21  Edward Jones  <ed.jones@embecosm.com>

	* lib/Database.cpp: Readd FeatureType and ParameterType tables.
	These are needed by the machine learner when training.

2016-09-19  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/Database.h: Use a string for metric parameters.
	(Database::getFeatures Database::getParameters): Added functions.
	(ResultIterator::ResultIterator): Pass in Database& as well as the
	sqlite3 database connection.
	(ResultIterator::m_db): Change type from sqlite3* to Database*.
	* include/mageec/TrainedML.h: Use a string to represent metric.
	* lib/Database.cpp: Use a string to represent metric in the
	database.
	(Database::getFeatures Database::getParameters): Added functions.
	(ResultIterator::ResultIterator): Pass in Database& as well as the
	sqlite3 database connection.
	(ResultIterator::m_db): Change type from sqlite3* to Database*.
	(ResultIterator::operator*): Simplify implementation by using
	Database::getFeatures and Database::getParameters.
	* lib/Driver.cpp: Use a string to represent metrics.
	* lib/TrainedML.cpp: Likewise.
	* lib/Util.cpp (metricToString stringToMetric): Remove functions.

2016-08-23  Edward Jones  <ed.jones@embecosm.com>

	* lib/Database.cpp: Correct SQL statement to add compilation to
	the database

2016-08-15  Edward Jones  <ed.jones@embecosm.com>

	* CMakeLists.txt: Add building of GCC standalone driver.

2016-08-02  Edward Jones  <ed.jones@embecosm.com>

	* CMakeLists.txt: Update flag setting when building mageec.

2016-08-02  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/Attribute.h: Fix compiler cast warning.
	* lib/Database.cpp: Likewise.
	* lib/Driver.cpp: Fix iterator not using a reference.

2016-08-02  Edward Jones  <ed.jones@embecosm.com>

	* lib/Database.cpp: Fix SQL for FeatureInstance table creation.

2016-08-02  Edward Jones  <ed.jones@embecosm.com>

	Remove the original GCC plugin

	* CMakeLists.txt: Remove gcc_plugin from the build system.